@@ -1701,6 +1701,8 @@ into account the blessed/cursed status, enchantment, damage, or
 quality of the weapon; you are free to manually fill your quiver with
 the `Q' command instead.  If no weapon is found or the option is
 false, the `t' (throw) command is executed instead.  (default false)
+.lp autounlock
+Automatically apply unlocking tool when trying to open a locked door (default true).
 .lp boulder
 Set the character used to display boulders (default is rock class symbol).
 .lp catname
